// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditPanelItem should match attribute item snapshot 1`] = `
EditPanelItem {
  "conditionInput": [Function],
  "dom": <li
    class="field-attrs-type prop-wrap "
  >
    <div
      class="field-prop"
    >
      <div
        class="attrs-prop-inputs prop-inputs f-input-group"
      >
        <input
          class="type"
          id="attrs-type-type"
          name="type"
          placeholder="Type"
          type="text"
          value="checkbox"
        />
      </div>
      <div
        class="attrs-prop-controls prop-controls"
      >
        <button
          class="prop-remove prop-control"
          type="button"
        >
          remove
        </button>
      </div>
    </div>
  </li>,
  "field": Object {
    "data": Object {
      "attrs": Object {},
    },
    "isDisabledProp": [Function],
    "isLockedProp": [Function],
  },
  "generateConditionFields": [Function],
  "isDisabled": null,
  "isHidden": null,
  "isLocked": null,
  "itemFieldGroups": Array [],
  "itemIndex": undefined,
  "itemKey": "attrs.type",
  "itemValues": Array [
    Array [
      "type",
      "checkbox",
    ],
  ],
  "panelName": "attrs",
  "processConditionUIState": [Function],
}
`;

exports[`EditPanelItem should match option snapshot 1`] = `
EditPanelItem {
  "conditionInput": [Function],
  "dom": <li
    class="field-options-0 prop-wrap "
  >
    <div
      class="field-prop"
    >
      <div
        class="options-prop-inputs prop-inputs f-input-group"
      >
        <div
          class="f-addon"
        >
          <input
            class="checked"
            id="options-0-checked"
            name="checked[]"
            placeholder="Checked"
            type="checkbox"
          />
        </div>
        <input
          class="label"
          id="options-0-label"
          name="label"
          placeholder="Label"
          type="text"
          value="Checkbox 1"
        />
        <input
          class="value"
          id="options-0-value"
          name="value"
          placeholder="Value"
          type="text"
          value="checkbox-1"
        />
      </div>
      <div
        class="options-prop-controls prop-controls"
      >
        <button
          class="prop-remove prop-control"
          type="button"
        >
          remove
        </button>
      </div>
    </div>
  </li>,
  "field": Object {
    "data": Object {
      "attrs": Object {},
    },
    "isDisabledProp": [Function],
    "isLockedProp": [Function],
  },
  "generateConditionFields": [Function],
  "isDisabled": null,
  "isHidden": null,
  "isLocked": null,
  "itemFieldGroups": Array [],
  "itemIndex": 0,
  "itemKey": "options.0",
  "itemValues": Array [
    Array [
      "checked",
      false,
    ],
    Array [
      "label",
      "Checkbox 1",
    ],
    Array [
      "value",
      "checkbox-1",
    ],
  ],
  "panelName": "options",
  "processConditionUIState": [Function],
}
`;
